add: 2 `games search` services
